--- a/src/app/presentation/page.module.scss
+++ b/src/app/presentation/page.module.scss
@@ -10,9 +10,7 @@
   box-sizing: border-box;
   margin: 0 auto;
   @media screen and (max-width: 960px) {
-    width: 90%;
-    
-    
+    width: 80%; 
   }
   // background: linear-gradient(#91d5aa, #a1d1a4);
   .history{
@@ -27,7 +25,7 @@
     }
     @media screen and (max-width: 960px) {
       flex-direction: column;
-    
+      align-items: center;
       img{
         width: 200px;
         height: 300px;
